# linda

./: linda.cabal  linda.sh  makefile  plain-words.sh  readme.txt  tex-words.sh
dict/: adjectives.txt  adverbs.txt  auxiliary-verbs.txt  cardinals.txt  colors.txt  conjunctions.txt  determiners.txt  irregular-verbs.txt  names.txt  nouns.txt  ordinals.txt  prepositions.txt  pronouns.txt  qualifiers.txt  regular-verbs.txt
dict/adjectives/: der-dest.txt  er-est.txt  ger-gest.txt  r-st.txt  ter-test.txt  y-ier-iest.txt
dict/adjectives/from-nouns/: al.txt  ce!tial.txt  ful-less.txt  ful.txt  y!iful-iless.txt  y!iful.txt  y!iless.txt  y!ious.txt
dict/adjectives/from-verbs/: able.txt  be!ptive.txt  d!sive.txt  de!sive.txt  e!able.txt  e!ing.txt  e!ive.txt  e!ptive.txt  el!ulsive.txt  ing.txt  ive.txt  y!iable.txt
dict/adverbs/from-adjectives/: ally.txt  e!y.txt  ly.txt  y!ily.txt
dict/nouns/: e!ion.txt  y!ication.txt
dict/nouns/from-adjectives/: e!ity-ist-ism.txt  ic!e-icist-icism.txt  ist-ism.txt  ity-ist-ism.txt  ity.txt  ous!ity.txt  ous!osity.txt  t!ce.txt  t!cy.txt
dict/nouns/from-verbs/: ation-er.txt  ation-or.txt  d!sion-der.txt  de!sion-der.txt  e!al.txt  e!ation-er.txt  e!ation-or.txt  e!ation.txt  e!ion-er.txt  e!ion-or.txt  e!ion.txt  e!ition-er.txt  e!ption-er.txt  e!tion.txt  ion-er.txt  (+11 more)
dict/regular-verbs/: e-es-ed-ing.txt  es-ed-ing.txt  s-d-ing.txt  s-ded-ding.txt  s-ed-ing.txt  s-ged-ging.txt  s-med-ming.txt  s-ned-ning.txt  s-ped-ping.txt  s-red-ring.txt  s-ted-ting.txt  y-ies-ied-ying.txt
src/Linda/: Utilities.hs
util/: balance-lines.hs
(+6 files in other folders)
